# voice-agent

./: .env  .gitignore  ARCHITECTURE.md  HANDOFF.md  README.md  ingest.py  pyproject.toml  requirements.txt  voice_agent.py
eval/: acme_handbook.md  promptfooconfig.yaml
src/voiceagent/: __init__.py  agent.py  api.py  bench.py  chunking.py  cli.py  config.py  eval.py  ingest.py  moss_store.py
src/voiceagent/static/: index.html
tests/: test_api.py  test_chunking.py
