[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceagent"
version = "0.2.0"
description = "Docs -> Moss -> LiveKit voice agent. Ingest documents, then talk to an agent that answers from them."
requires-python = ">=3.10"
dependencies = [
    "livekit==1.1.13",
    "livekit-agents==1.6.6",
    "livekit-plugins-silero==1.6.6",
    "moss==1.7.1",
    "pypdf==5.1.0",
]

# This is the line that turns the project into a real installed command:
#   `voiceagent ingest ...` / `voiceagent talk` become runnable from any terminal
# after `pip install -e .` — no more `python3 some_script.py`.
[project.scripts]
voiceagent = "voiceagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
