[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceagent"
version = "0.2.0"
description = "Docs -> Moss -> LiveKit voice agent. Ingest documents, then talk to an agent that answers from them."
requires-python = ">=3.10"
dependencies = [
    "livekit==1.1.13",
    "livekit-agents==1.6.6",
    "livekit-plugins-silero==1.6.6",
    "moss==1.7.1",
    "pypdf==5.1.0",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
test = ["httpx==0.28.1"]

# These turn the project into real installed commands after `pip install -e .`:
#   voiceagent      -> CLI (ingest / talk)
#   voiceagent-api  -> HTTP API server (v3)
[project.scripts]
voiceagent = "voiceagent.cli:main"
voiceagent-api = "voiceagent.api:main"

[tool.setuptools.packages.find]
where = ["src"]
